data/forge_javadoc/1.9.4/raw/net/minecraft/client/gui/GuiListExtended.md
---
title: "GuiListExtended"
description: "public abstract class GuiListExtended extends GuiSlot"
package: "net/minecraft/client/gui"
version: "1.9.4"
forgeBuild: "12.17.0.2051"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.9.4-12.17.0.2051/net/minecraft/client/gui/GuiListExtended.html"
sourceType: javadoc
---

# GuiListExtended

**Inheritance:** java.lang.Object → net.minecraft.client.gui.GuiSlot → net.minecraft.client.gui.GuiListExtended

## Class signature

```java
public abstract class GuiListExtended extends GuiSlot
```

## Methods

- `protected void drawBackground()`
- `protected void drawSlot(int entryID, int insideLeft, int yPos, int insideSlotHeight, int mouseXIn, int mouseYIn)`
- `protected void elementClicked(int slotIndex, boolean isDoubleClick, int mouseX, int mouseY)`
- `abstract GuiListExtended.IGuiListEntry getListEntry(int index)`
- `protected boolean isSelected(int slotIndex)`
- `boolean mouseClicked(int mouseX, int mouseY, int mouseEvent)`
- `boolean mouseReleased(int p_148181_1_, int p_148181_2_, int p_148181_3_)`
- `protected void updateItemPos(int entryID, int insideLeft, int yPos)`

## Fields

- `GuiListExtended`
