data/forge_javadoc/1.12.2/raw/net/minecraft/client/gui/GuiListExtended.md
---
title: "GuiListExtended"
description: "public abstract class GuiListExtended extends GuiSlot"
package: "net/minecraft/client/gui"
version: "1.12.2"
forgeBuild: "14.23.5.2859"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.12.2-14.23.5.2859/net/minecraft/client/gui/GuiListExtended.html"
sourceType: javadoc
---

# GuiListExtended

**Inheritance:** java.lang.Object → net.minecraft.client.gui.GuiSlot → net.minecraft.client.gui.GuiListExtended

## Class signature

```java
public abstract class GuiListExtended extends GuiSlot
```

## Methods

- `protected void drawBackground()`
- `protected void drawSlot(int slotIndex, int xPos, int yPos, int heightIn, int mouseXIn, int mouseYIn, float partialTicks)`
- `protected void elementClicked(int slotIndex, boolean isDoubleClick, int mouseX, int mouseY)`
- `abstract GuiListExtended.IGuiListEntry getListEntry(int index)`
- `protected boolean isSelected(int slotIndex)`
- `boolean mouseClicked(int mouseX, int mouseY, int mouseEvent)`
- `boolean mouseReleased(int x, int y, int mouseEvent)`
- `protected void updateItemPos(int entryID, int insideLeft, int yPos, float partialTicks)`

## Fields

- `GuiListExtended`
